--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Unity WebGL Player | Guardians</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=600 height=960 tabindex="-1" style="width: 99vw; height: 99vh; background: #231F20"></canvas>
-    <script src="Build/Web240815_sound_design.loader.js"></script>
+    <canvas id="unity-canvas" width=600 height=960 tabindex="-1" style="width: 600px; height: 960px; background: #231F20"></canvas>
+    <script src="Build/Web240819.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Web240815_sound_design.data",
-        frameworkUrl: "Build/Web240815_sound_design.framework.js",
-        codeUrl: "Build/Web240815_sound_design.wasm",
+        dataUrl: "Build/Web240819.data",
+        frameworkUrl: "Build/Web240819.framework.js",
+        codeUrl: "Build/Web240819.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SashkaStudentCompany",
         productName: "Guardians",
