--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Guardians</title>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=600 height=960 tabindex="-1" style="width: 600px; height: 99vh; background: #231F20"></canvas>
+  <body style="text-align: center; padding: 0; border: 0; margin: 0; background: #231F20">
+    <canvas id="unity-canvas" width=600 height=960 tabindex="-1" style="width: 55.69vh; height: 99.5vh; background: #231F20"></canvas>
     <script src="Build/Web240815_sound_design.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
